--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,9 +21,13 @@ jobs:
         run: |
           docker version
           # 登录阿里云镜像仓库
-          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
-          cd xxl-job-admin
+          # docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
+          docker login --username=gsw0731 registry.cn-hangzhou.aliyuncs.com
+          # cd xxl-job-admin
+          cd hz_k8s
           # 使用Dockerfile构建镜像
-          docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
+          # docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
+          docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/gsw_hcie/hz_k8s:2.4.2
           # 推送镜像到镜像仓库
-          docker push registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
+          # docker push registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
+          docker push registry.cn-hangzhou.aliyuncs.com/gsw_hcie/hz_k8s:2.4.2
