--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,10 +24,10 @@ jobs:
           # docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
           docker login --username=gsw0731 registry.cn-hangzhou.aliyuncs.com
           # cd xxl-job-admin
-          cd hz_k8s
+          cd xxl-job-admin
           # 使用Dockerfile构建镜像
           # docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
-          docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/gsw_hcie/hz_k8s:2.4.2
+          docker build . --file Dockerfile --tag registry.cn-hangzhou.aliyuncs.com/gsw_hcie/xxl-job-admins:2.4.2
           # 推送镜像到镜像仓库
           # docker push registry.cn-hangzhou.aliyuncs.com/kdyzm/xxl-job-admin:2.4.2
-          docker push registry.cn-hangzhou.aliyuncs.com/gsw_hcie/hz_k8s:2.4.2
+          docker push registry.cn-hangzhou.aliyuncs.com/gsw_hcie/xxl-job-admin:2.4.2
