--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           docker version
           # 登录阿里云镜像仓库
-          # docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
-          docker login --username=gsw0731 registry.cn-hangzhou.aliyuncs.com
+          docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
+          # docker login --username=gsw0731 registry.cn-hangzhou.aliyuncs.com
           # cd xxl-job-admin
           cd xxl-job-admin
           # 使用Dockerfile构建镜像
